--- a/_layouts/pricing.html
+++ b/_layouts/pricing.html
@@ -6,7 +6,8 @@ layout: default
     <div class="col-12">
     <h2>{{page.title}}</h2>
     <p>{{page.subtitle}}</p>
-    <div class="col-sm-6 col-md-6 col-lg-6"><img src="../images/pricing/pricing.svg"/></div>
+    <div class="col-sm-6 col-md-6 col-lg-6">
+        <img class="col-sm-12 col-md-12 col-lg-12" src="../images/pricing/pricing.svg"/></div>
      
      
      <div class="content">{{content}}</div>
