--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -6,7 +6,7 @@ layout: default
     <div class="col-12">
      <p><h1>{{page.title}} - {{page.subtitle}}</h1></p>
      <p><h3>{{content}}</h3></p>
-     <img src="../images/others/comingsoon.svg" />
+     <img class="col-sm-12 col-md-12 col-lg-12" src="../images/others/comingsoon.svg" />
      
     </div>
  </div>
