--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -4,7 +4,7 @@ layout: default
 <div class='container'>
      <div class='col-12'>
           <div class="row"><h1>{{page.title}}</h1></div>
-          <img src="../images/faq/faq.svg" />
+          <img class="col-sm-12 col-md-12 col-lg-12" src="../images/faq/faq.svg" />
           <div class="row">
                {% assign fq = site.data.faq.faq | sort: 'weight'  %}
                {% for item in fq %}
