--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="footer-inner">
           <div class="col-sm-3">
-            <ul class="nav flex-column"><h4>About Myllenyl</h4>
+            <ul class="nav flex-column"><h4>About tchzo</h4>
               {% assign footermenu = site.data.menus.footer1 | sort: 'weight'  %}
               {% for item in footermenu %}
               <li class="{% if item.url == page.url %}active{% endif %} nav-item">
