--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,15 +11,15 @@ bodyClass: page-contact
       <p><h3>Points of Contact</h3></p>
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <p><h4>France | Myllenyl Headquarters</h4>
+          <p><h4>France | tchzo Headquarters</h4>
           194 rue Lafayette 75010 Paris<br>
-          +33 670 41 53 73<br><a href="mailto:contact@myllenyl.com">contact@myllenyl.com</a>
+          +33 670 41 53 73<br><a href="mailto:contact@tchzo.com">contact@tchzo.com</a>
           </p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <p><h4>India | Myllenyl India Office</h4>
+          <p><h4>India | tchzo India Office</h4>
             1569, 19 Main, AECS A Block, Singasandra, Bangalore 560068<br>
-            +91 80 4956 3512<br><a href="mailto:contact@myllenyl.com">contact@myllenyl.com</a>
+            +91 80 4956 3512<br><a href="mailto:contact@tchzo.com">contact@tchzo.com</a>
           </p>
         </div>
       </div>
