--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ bodyClass: page-home
 <div class="strip">
   
   <div class="container pt-6 pb-6 pb-md-10">
-    <div class="row justify-content-center"><h1>Why ConnectEd?</h1></div>
+    <div class="row justify-content-center"><h1>Why Tchzo?</h1></div>
     <div class="row justify-content-start">
       
       {% for service in site.services %}
