--- a/_includes/call.html
+++ b/_includes/call.html
@@ -2,7 +2,7 @@
   
     {% if include.show_button %}
       <div class="call-box-bottom">
-        <a href="/request-demo" class="button">Book Your Demo</a>
+        <a href="/request-demo" class="button">Call Us</a>
       </div>
     {% endif %}
 </div>
