--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -27,7 +27,7 @@ bodyClass: page-contact
     <div class="col-12">
       <div><p>Contact Us</p></div>
       
-        <form action="https://formspree.io/f/xrgongqp" method="POST" method="POST">
+        <form action="https://formspree.io/f/mqknqdpq" method="POST" method="POST">
           
           <div class="form-group">
             <div><label class="control-label" for="fname">First Name:</label></div>
